tests/rpm-pkgs/libmetalink-0.1.3-15.fc35/output-exp@symbiotic/scan-results.err
Error: COMPILER_WARNING (CWE-1071):
libmetalink-0.1.3/test/metalink_parser_test.c:233:72: warning[-Wempty-body]: while loop has empty body
#    while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#                                                                       ^
libmetalink-0.1.3/test/metalink_parser_test.c:233:72: note: put the semicolon on a separate line to silence this warning
#  231|       char buf[4096];
#  232|       ssize_t nread;
#  233|->     while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#  234|       CU_ASSERT_FATAL(nread != -1);
#  235|       if(nread == 0) {

Error: COMPILER_WARNING (CWE-1071):
libmetalink-0.1.3/test/metalink_parser_test.c:259:72: warning[-Wempty-body]: while loop has empty body
#    while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#                                                                       ^
libmetalink-0.1.3/test/metalink_parser_test.c:259:72: note: put the semicolon on a separate line to silence this warning
#  257|       char buf[4096];
#  258|       ssize_t nread;
#  259|->     while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#  260|       CU_ASSERT_FATAL(nread != -1);
#  261|       if(nread == 0) {

Error: COMPILER_WARNING (CWE-1071):
libmetalink-0.1.3/test/metalink_parser_test.c:300:72: warning[-Wempty-body]: while loop has empty body
#    while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#                                                                       ^
libmetalink-0.1.3/test/metalink_parser_test.c:300:72: note: put the semicolon on a separate line to silence this warning
#  298|       char buf[128];
#  299|       ssize_t nread;
#  300|->     while((nread = read(fd, buf, sizeof(buf))) == -1 && errno == EINTR);
#  301|       CU_ASSERT_FATAL(nread != -1);
#  302|       /* See when prematured XML data is supplied */
